# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.365 2005/11/07 16:25:06 rocket Exp $

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Allow LDFLAGS to be specified as an ENV variable for stage1

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix rc-update to automatically run default options for livecds. Removed an
  erroneous key check.

  02 Nov 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/livecd_stage1_target.py, modules/tinderbox_target.py:
  Make use spec key optional to default to profile defaults

  02 Nov 2005; Eric Edgar <rocket@gentoo.org>
  +examples/stage4_template.spec:
  Preliminary stage4_template.spec file

  01 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0_pre20051101-slot.patch, catalyst:
  Updated version stamp and added slot patch.

  26 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix ordering problem so self.settings is defined

  18 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Correct a rsync issue when the directory doesnt exist

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/embedded/embedded-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-controller.sh,
  targets/stage4/stage4-controller.sh:
  run pre_kmerge and post_kmerge only once

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  MIPS bootloader patch

  15 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/mips-arcload_conf.sh:
  Fix MIPS Serial Detection

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
  +targets/support/mips-arcload_conf.sh:
  Application of Kumbas patches for MIPS support
